# hf_cxr_agent

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  chainlit.md  main.py  pyproject.toml  requirements.txt
cxr_agents/: registry.py  registry.py~
cxr_agents/cxr_orchestrator/: orchestrator_agent.py  orchestrator_agent.py~
cxr_agents/cxr_triage/: triage_agent.py  triage_agent.py~
cxr_agents/sandbox/cxr-overlay/: render_overlay.py
cxr_agents/skills/: locate.py~
cxr_agents/skills/cxr_localization/: SKILL.md
cxr_agents/skills/cxr_localization/references/: REFERENCE.md
cxr_agents/skills/cxr_orchestrator/: SKILL.md
cxr_agents/skills/cxr_orchestrator/references/: REFERENCE.md
cxr_agents/skills/cxr_qa/: SKILL.md
cxr_agents/skills/cxr_reasoning/: SKILL.md  SKILL.md~
cxr_agents/skills/cxr_summary/: SKILL.md  SKILL.md~
cxr_agents/tools/: encode_image.py  locate.py  locate.py~  overlay.py  report.py  report.py~  sandbox_overlay.py  summarize.py  summarize.py~  triage.py~  tts.py
examples/: examples.csv
models/: __init__.py  pipeline.py
public/elements/: CXRGallery.jsx  NarrationPreview.jsx  OverlayFrame.jsx  TimerStop.jsx  TurnTimer.jsx
sandbox/cxr-overlay/: SKILL.md  overlay_template.html
skills/cxr-orchestrator/: SKILL.md
skills/cxr-triage/: SKILL.md
skills/cxr-triage/assets/: triage_schema.json
skills/cxr_triage/: SKILL.md
tests/test_skills/: test_triage.py
tools/: __init__.py  context.py  localize.py  reason.py  sandbox_overlay.py  triage.py  voice.py
tools/cxr-triage/: triage.py
(+4 files in other folders)
